--- a/.github/workflows/recover.yml
+++ b/.github/workflows/recover.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   openssl:
     name: Recover With OpenSSL
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - env:
